Closed Bug 667538 Opened 13 years ago Closed 13 years ago

Function.caller, Function.arguments crash when accessed with no script running

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: Waldo, Assigned: Waldo)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch Patch and testSplinter Review
This probably doesn't matter for the browser (although I wouldn't say it's impossible to get the browser to access a named property of a specific object, not with certainty at least), but it could matter for others embedding us (and general code-correctness, of course).
Attachment #542215 - Flags: review?(evilpies)
Comment on attachment 542215 [details] [diff] [review]
Patch and test

Review of attachment 542215 [details] [diff] [review]:
-----------------------------------------------------------------

r+ on this change. New bug on the 
> function f () { console.log(f.caller) } f()
issue.
Attachment #542215 - Flags: review?(evilpies) → review+
I filed bug 667646 on the issue mentioned in comment 1 (which was originally discussed on IRC, in case you were wondering somewhat at the non sequitur :-) ).
Blocks: 640593
http://hg.mozilla.org/tracemonkey/rev/14680bb642a5
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla7
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: mozilla7 → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: