Bug 667538 - Crash accessing Function.caller or Function.arguments when no script is running.  r=evilpie